--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,10 @@
 {% load static %}
 
+<!-- This is an HTML template for a web application that provides various agricultural services, including crop
+recommendation, fertilizer requirement, irrigation planning, and crop yield prediction. The template uses Bootstrap CSS
+ and custom styles to create a responsive layout with four clickable cards, each linked to a specific service. There is
+  also a logout button at the bottom of the page.-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -9,6 +14,7 @@
   <title>Home Page</title>
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <!-- Custom styles -->
   <style>
     body {
       background-color: #66BB6A;
@@ -36,8 +42,11 @@
 </head>
 <body>
   <div class="container-fluid">
+    <!-- First row of cards -->
     <div class="row mt-5">
+      <!-- First card - Crop Recommendation -->
       <div class="col-md-6">
+        <!-- Link to the crop_recommend view -->
         <a href="{% url 'crop_recommend' %}">
           <div class="card text-center">
             <div class="card-body">
@@ -46,7 +55,9 @@
           </div>
         </a>
       </div>
+      <!-- Second card - Fertilizer Requirement -->
       <div class="col-md-6">
+        <!-- Link to the fertilizer_requirement view -->
         <a href="{% url 'fertilizer_requirement' %}">
           <div class="card text-center">
             <div class="card-body">
@@ -56,8 +67,11 @@
         </a>
       </div>
     </div>
+    <!-- Second row of cards -->
     <div class="row mt-5">
+      <!-- Third card - Irrigation Planning -->
       <div class="col-md-6">
+        <!-- Link to the irrigation_planning view -->
         <a href="{% url 'irrigation_planning' %}">
           <div class="card text-center">
             <div class="card-body">
@@ -66,7 +80,9 @@
           </div>
         </a>
       </div>
+      <!-- Fourth card - Crop Yield Prediction -->
       <div class="col-md-6">
+        <!-- Link to the crop_yield_prediction view -->
         <a href="{% url 'crop_yield_prediction' %}">
           <div class="card text-center">
             <div class="card-body">
@@ -77,6 +93,7 @@
       </div>
     </div>
   </div>
+  <!-- Logout button -->
   <div class="container-fluid mt-5">
     <div class="row justify-content-center">
       <div class="col-md-4 text-right ml-auto mr-3">
