--- a/templates/login.html
+++ b/templates/login.html
@@ -1,3 +1,7 @@
+<!-- This is a login page HTML code. It includes a form with fields for entering a username and password. The form also
+ includes a button for submitting the entered information. Additionally, there is a link for creating a new account.
+  The design uses CSS to create a visually appealing background and form layout. -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -143,10 +147,10 @@ button{
         <h3>Login Here</h3>
         {% csrf_token %}
         <label for="username">Username</label>
-        <input type="text" placeholder="Enter Username" id="username" name="username">
+        <input type="text" placeholder="Enter Username" id="username" name="username" required>
 
         <label for="password">Password</label>
-        <input type="password" placeholder="Password" id="password" name="pass">
+        <input type="password" placeholder="Password" id="password" name="pass" required>
 
         <button type="submit">Log In</button>
         <!-- <input type="button" value=""> -->
